[WFMP-100] Ensure the plugin works with Java 9+.